--- a/mvp-example/build.gradle
+++ b/mvp-example/build.gradle
@@ -1,6 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.neenbedankt.android-apt'
+
 android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     compileSdkVersion 24
     buildToolsVersion "24.0.3"
 
@@ -10,6 +17,8 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -25,7 +34,15 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.dagger:dagger:2.2'
     testApt 'com.google.dagger:dagger-compiler:2.2'
+    apt 'com.google.dagger:dagger-compiler:2.2'
     testCompile 'com.google.dagger:dagger:2.2'
     compile 'io.reactivex:rxandroid:1.2.1'
+
+    compile 'com.jakewharton:butterknife:7.0.0'
+
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+
     compile project(':yetanothermvplibrary')
 }
